--- a/coolinicHPS1-1/src/main/resources/application.properties
+++ b/coolinicHPS1-1/src/main/resources/application.properties
@@ -1,11 +1,31 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+#spring.mvc.static-path-pattern=/static/**
+#spring.web.resources.static-locations=classpath:static/assets/
+
+#spring.mvc.static-path-pattern=/static/**
+#spring.web.resources.static-locations="classpath:/resources/static/assets/"
+#spring.web.resources.add-mappings=true
+
+spring.mvc.static-path-pattern=/resources/**
+
+spring.web.resources.static-locations=file:/resources/static/assets
+
+spring.web.resources.add-mappings=true
+
+#spring.mvc.static-path-pattern=/js/**,/css/**,/img/**
+#spring.resources.static-locations=classpath:/resources/static/js/,classpath:/resources/static/css/,classpath:/resources/static/img/
+
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/hpm?characterEncoding=UTF-8&serverTimezone=UTC
+## spring.datasource.url=jdbc:mysql://localhost:3306/hpm?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://43.201.55.99:3306/hpm?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=eownwnsla12
+##spring.datasource.password=eownwnsla12
+spring.datasource.password=Eownwnsla12!@
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
 # mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+
+spring.profiles.active=@spring.profiles.active@
